--- a/base-project/index.html
+++ b/base-project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git Profile</title>
+    <title>N-Mapper</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="input_section" id="user-i">
                 <input type="text" id="hostname" class="host">
-                <button><i class="fas fa-angle-right"></i></button>
+                <button id="findInfo" onclick="clickSubmit()"><i class="fas fa-angle-right"></i></button>
         </div>
     </div>
 
