--- a/base-project/index.html
+++ b/base-project/index.html
@@ -27,7 +27,7 @@
         <div class="history_ports spacer" id="history_port">
         </div>  
 
-        <h4>New Added Ports</h4>
+        <h4>Newly Added Ports</h4>
         <div class="newly_added_ports spacer" id = "new_port">
         </div>  
 
